--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ dist/
 
 # dependencies
 node_modules/
-
+**/.terraform/*
 # profiling files
 chrome-profiler-events*.json
 speed-measure-plugin*.json
