--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "devDependencies": {
+    "@types/node": "^17.0.36",
     "sass": "^1.49.11",
     "typescript": "^4.6.3"
   },
   "scripts": {
-    "build": "sass src/styles && tsc src/script/*.ts",
+    "build": "sass src/styles && tsc src/scripts/*.ts",
     "sass-w": "sass --watch src/styles",
     "tsc-w": "tsc --watch src/scripts/*.ts --outDir src"
   },
