--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
     "compilerOptions": {
       "outDir": "src",
-      "allowJs": true,
-      "target": "ES5",
-      "lib": [ "es2015", "DOM" ]
+      "target": "es2015",
+      "module": "es2015",
+      "moduleResolution": "node",
+      "esModuleInterop": true,
+      "sourceMap": true
     },
     "include": ["./src/scripts"],
     "exclude": []
