--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "devDependencies": {
     "@types/node": "^17.0.36",
+    "http-server": "^14.1.1",
+    "node-env-run": "^4.0.2",
     "sass": "^1.49.11",
     "typescript": "^4.6.3"
   },
   "scripts": {
     "build": "sass src/styles && tsc src/scripts/*.ts",
     "sass-w": "sass --watch src/styles",
-    "tsc-w": "tsc --watch"
+    "tsc-w": "tsc --watch",
+    "start": "http-server -p 5050",
+    "start-backend": "nodenv src/backend/api.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +27,9 @@
   "bugs": {
     "url": "https://github.com/serena97/portfolio/issues"
   },
-  "homepage": "https://github.com/serena97/portfolio#readme"
+  "homepage": "https://github.com/serena97/portfolio#readme",
+  "dependencies": {
+    "axios": "^0.27.2",
+    "express": "^4.18.1"
+  }
 }
