--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
       "esModuleInterop": true,
       "sourceMap": true
     },
-    "include": ["./src/scripts"],
+    "include": ["./src/scripts", "./src/backend"],
     "exclude": []
 }
