--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typescript": "^4.6.3"
   },
   "scripts": {
-    "build": "sass src/styles && tsc src/scripts/*.ts",
+    "build": "sass src/styles && tsc",
     "sass-w": "sass --watch src/styles",
     "tsc-w": "tsc --watch",
     "start": "http-server -p 5050",
