--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
       "esModuleInterop": true,
       "sourceMap": true
     },
-    "include": ["./src/scripts", "./src/backend"],
+    "include": ["./src/scripts", "./src/backend", "src/types/photoswipe.d.ts"],
     "exclude": []
 }
