--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "sass-w": "sass --watch src/styles",
     "build-client": "webpack --config webpack.config.js -w",
     "tsc-w": "tsc --watch",
-    "start": "http-server -p 5500",
-    "start-backend": "nodenv src/backend/api.js"
+    "prerender": "tsc src/scripts/art.ts && node src/scripts/art.js",
+    "start": "http-server -p 5500"
   },
   "repository": {
     "type": "git",
@@ -32,10 +32,13 @@
   },
   "homepage": "https://github.com/serena97/portfolio#readme",
   "dependencies": {
+    "@types/jsdom": "^20.0.0",
     "aws-sdk": "^2.1194.0",
     "axios": "^0.27.2",
     "express": "^4.18.1",
+    "jsdom": "^20.0.0",
     "packery": "^2.1.2",
-    "photoswipe": "^5.3.0"
+    "photoswipe": "^5.3.0",
+    "pretty": "^2.0.0"
   }
 }
