--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
     "compilerOptions": {
-      "outDir": "src",
+      "outDir": "src/scripts",
       "target": "es2015",
       "module": "es2015",
       "moduleResolution": "node",
       "esModuleInterop": true,
       "sourceMap": true
     },
-    "include": ["./src/scripts", "./src/backend", "src/types/photoswipe.d.ts"],
+    "include": ["src/scripts"],
     "exclude": []
 }
