--- a/package.json
+++ b/package.json
@@ -14,11 +14,9 @@
     "webpack-cli": "^4.10.0"
   },
   "scripts": {
-    "build": "sass src/styles && tsc",
     "sass-w": "sass --watch src/styles",
-    "build-client": "webpack --config webpack.config.js -w",
     "tsc-w": "tsc --watch",
-    "prerender": "tsc src/scripts/art.ts && node src/scripts/art.js",
+    "prerender": "sass src/styles && tsc && node src/scripts/art.js",
     "start": "http-server -p 5500"
   },
   "repository": {
@@ -34,10 +32,7 @@
   "dependencies": {
     "@types/jsdom": "^20.0.0",
     "aws-sdk": "^2.1194.0",
-    "axios": "^0.27.2",
-    "express": "^4.18.1",
     "jsdom": "^20.0.0",
-    "packery": "^2.1.2",
     "photoswipe": "^5.3.0",
     "pretty": "^2.0.0"
   }
